--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bukku</title>
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/owl.css">
-	<link rel="stylesheet" type="text/css" href="css/animate.css">
-	<link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" type="text/css" href="css/et-icons.css">
-	<link rel="stylesheet" type="text/css" href="css/tooltip.css">
-	<link rel="stylesheet" type="text/css" href="css/lightbox.css">
-	<link id="main" rel="stylesheet" type="text/css" href="css/publisher.css">
+	<link rel="stylesheet" type="text/css" href="owl.css">
+	<link rel="stylesheet" type="text/css" href="animate.css">
+	<link href="font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" type="text/css" href="et-icons.css">
+	<link rel="stylesheet" type="text/css" href="tooltip.css">
+	<link rel="stylesheet" type="text/css" href="lightbox.css">
+	<link id="main" rel="stylesheet" type="text/css" href="publisher.css">
 </head>
 <body>
 <div id="wrapper" class="behind">
