--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Bukku</title>
+	<title>Ahmad Faraz | CloakedSec</title>
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
