--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>CoD3Up | Exhortations</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="android-icon-96x96.png" type="image/png" sizes="96x96">
 
     <!-- Custom fonts for this template -->
