--- a/index.html
+++ b/index.html
@@ -1,10 +1,442 @@
-<<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>c0d3Up | cloakedSec</title>
-  </head>
-  <body>
-    This.body
-  </body>
+<!DOCTYPE html>
+<html lang="en" >
+
+<head>
+  <meta charset="UTF-8">
+  <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700|Work+Sans:400,700" rel="stylesheet">
+<script src="https://use.fontawesome.com/cbd226819b.js"></script>
+
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+
+      <link rel="stylesheet" href="style.css">
+
+
+</head>
+
+<body>
+
+
+<nav class="navbar navbar-light fixed-top bg-faded">
+
+  <div class="collapse navbar-collapse" id="navbarNav">
+  <ul class="navbar-nav list-inline ml-auto text-center">
+    <li class="active nav-item">
+      <a class="nav-link" href="#">Home</a>
+    </li>
+    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+    <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+    <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+  <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+  </ul>
+  </div>
+
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+</nav>
+<!-- Header -->
+<header id="top" class="header">
+  <div class="container intro">
+    <div class="row text-center">
+      <div class="col">
+        <h1>Ahmad Faraz</h1>
+      </div>
+    </div>
+    <div class="row align-items-center  text-center">
+      <div class="col">
+        <ul class="list-inline headline-list">
+          <li class="list-inline-item"> DevOps Engineer - Linux Administrator</li>
+        </ul>
+      </div>
+    </div>
+    <div class="row align-items-center  text-center">
+      <div class="col">
+        <a href="#services" class="btn btn-secondary btn-lg"><i class="fa fa-angle-down fa-3x" aria-hidden="true"></i></a>
+      </div>
+    </div>
+  </div>
+</header>
+
+<!-- Services -->
+<span class="anchor" id="services"></span>
+<section class="services">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-12">
+        <h2>Services</h2>
+
+      </div>
+    </div>
+    <!-- /.row -->
+    <div class="row text-center">
+      <div class="col-12">
+        <p class="lead">Knows Java better than your Mom<br>My services include: POJO Classes, Shell Scripting, Network Administrator, Web Development, Application Development, Debugging</p>
+
+      </div>
+    </div>
+    <!-- /.row -->
+    <div class="row text-center">
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <img src="https://dl.dropboxusercontent.com/u/7672939/circle.png?raw=1" height="100px" width="100px">
+        <p class="service-name">Service1</p>
+        <p class="service-description">Leverage agile frameworks to provide a robust synopsis for high level overviews.
+        </p>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <img src="https://dl.dropboxusercontent.com/u/7672939/circle.png?raw=1" height="100px" width="100px">
+        <p class="service-name">Service2</p>
+        <p class="service-description">Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <img src="https://dl.dropboxusercontent.com/u/7672939/circle.png?raw=1" height="100px" width="100px">
+        <p class="service-name">Service3</p>
+        <p class="service-description">Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
+        </p>
+
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <img src="https://dl.dropboxusercontent.com/u/7672939/circle.png?raw=1" height="100px" width="100px">
+        <p class="service-name">Service4</p>
+        <p class="service-description">Override the digital divide with additional clickthroughs from DevOps. </p>
+
+      </div>
+    </div>
+    <!-- /.row -->
+  </div>
+
+  <!-- /.container -->
+</section>
+  <hr>
+<!-- Portfolio -->
+<span class="anchor" id="portfolio"></span>
+<section class="portfolio">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-12">
+        <h2>Portfolio</h2>
+      </div>
+    </div>
+    <!-- /.row -->
+    <div class="row">
+      <div class="col-md-6 portfolio-item">
+       <img class="img-fluid" src="https://dl.dropboxusercontent.com/u/7672939/portfolio_placeholder.png"><h3 class="project-title">E-Cart Administrator: Gentelella</h3><p class="project-link"><a href="#">Project Link<a/></p>
+
+      </div>
+      <div class="col-md-6 portfolio-item">
+       <img class="img-fluid" src="https://dl.dropboxusercontent.com/u/7672939/portfolio_placeholder.png"><h3 class="project-title">Restaurant Management System</h3><p class="project-link"><a href="#">Project Link<a/></p></div>
+
+    </div>
+    <!-- /.row -->
+   <div class="row">
+           <div class="col-md-6 portfolio-item">
+     <img class="img-fluid" src="https://dl.dropboxusercontent.com/u/7672939/portfolio_placeholder.png"><h3 class="project-title">Project Title</h3><p class="project-link"><a href="#">link to project<a/></p>
+     </div>
+      <div class="col-md-6 portfolio-item">
+           <img class="img-fluid" src="https://dl.dropboxusercontent.com/u/7672939/portfolio_placeholder.png"><h3 class="project-title">Project Title</h3><p class="project-link"><a href="#">link to project<a/></p>
+     </div>
+
+    </div>
+    <!-- /.row -->
+       <div class="row">
+               <div class="col-md-6 portfolio-item">
+                   <img class="img-fluid" src="https://dl.dropboxusercontent.com/u/7672939/portfolio_placeholder.png"><h3 class="project-title">Project Title</h3><p class="project-link"><a href="#">link to project<a/></p>
+         </div>
+
+               <div class="col-md-6 portfolio-item">
+                    <img class="img-fluid" src="https://dl.dropboxusercontent.com/u/7672939/portfolio_placeholder.png"><h3 class="project-title">Project Title</h3><p class="project-link"><a href="#">link to project<a/></p>
+         </div>
+
+    </div>
+    <!-- /.row -->
+
+  </div>
+</section>
+  <hr>
+
+<!-- Experience -->
+<span class="anchor" id="experience"></span>
+<section class="experience">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-12">
+        <h2>Experience</h2>
+      </div>
+    </div>
+    <!-- /.row -->
+        <div class="row text-center">
+      <div class="col-12">
+        <p class="lead"><a href="#" target="blank">(click here to download a copy of my resume)</a></p>
+      </div>
+    </div>
+    <!-- /.row -->
+    <div class="row">
+      <div class="col-sm-12 col-md-12 col-lg-6">
+        <div id="accordion" role="tablist" aria-multiselectable="true">
+  <div class="card">
+    <div class="card-header" role="tab" id="headingOne">
+      <h3 class="mb-0 job-title">
+        <a data-toggle="collapse"  href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        Software Engineer
+        </a>
+      </h3>
+      <p class="job-details">NIIT Technologies Pvt. Ltd. Gurgaon</p>
+        <p class="job-details">March 2019 - Present</p>
+    </div>
+
+    <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
+      <div class="card-block">
+
+        <ul>
+          <li>Accomplishment bring to the table win-win survival strategies to ensure proactive domination</li>
+         <li>Accomplishment user generated content in real-time will have multiple touchpoints for offshoring
+</li>
+<li>Accomplishment podcasting operational change management inside of workflows to establish a framework</li>
+<li>Accomplishment collaboratively administrate empowered markets via plug-and-play networks </li>
+ <li>Accomplishment Develop resource guides and facilitate professional development sessions for faculty on topics including designing effective visuals, creating multimedia content, using student response systems, and using the Google Apps for Education suite </li>
+<li>Accomplishment dramatically visualize customer directed convergence without revolutionary ROI
+</li>
+
+
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header" role="tab" id="headingTwo">
+      <h3 class="mb-0 job-title">
+        <a class="collapsed" data-toggle="collapse"  href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          <i class="fa fa-caret-right" aria-hidden="true"></i>
+
+          Freelance services
+
+
+        </a>
+      </h3>
+      <p class="job-details">Clients include businesses, nonprofits, and creatives</p>
+      <p class="job-details">Start date - present</p>
+    </div>
+    <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="card-block">
+        <ul>
+        <li>Service </li>
+        <li>Service</li>
+        <li>Service </li>
+        <li>Service</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header" role="tab" id="headingThree">
+      <h3 class="mb-0 job-title">
+        <a class="collapsed" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                   <i class="fa fa-caret-right" aria-hidden="true"></i>
+          Past job title
+        </a>
+      </h3>
+      <p class="job-details">Past employer</p>
+      <p class="job-details">Start date - End date</p>
+    </div>
+    <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
+      <div class="card-block">
+        <ul>
+          <li>Accomplishment</li>
+                    <li>Accomplishment
+</li>
+          <li>Accomplishment</li>
+          <li>Accomplishment</li>
+          <li>Accomplishment</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+            <div class="col-sm-12 col-md-12 col-lg-6">
+      <div id="accordion" role="tablist" aria-multiselectable="true">
+
+<div class="card">
+    <div class="card-header" role="tab" id="headingFive">
+      <h3 class="mb-0 job-title">
+        <a data-toggle="collapse"  href="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
+          Skills & Tools
+        </a>
+      </h3>
+    </div>
+    <div id="collapseFive" class="collapse show" role="tabpanel" aria-labelledby="headingFive">
+      <div class="card-block">
+        <ul>
+          <li>Programming language</li>
+          <li>Programming language</li>
+          <li>Programming language</li>
+          <li>Programming language</li>
+          <li>Expensive complicated software title
+</li>
+                  <li>Expensive complicated software title
+</li>
+                  <li>Expensive complicated software title
+</li>
+          <li>Skill
+</li>
+          <li>Skill
+</li>
+          <li>Skill
+</li>
+          <li>Skill
+</li>
+
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-header" role="tab" id="headingSix">
+      <h3 class="mb-0 job-title">
+        <a class="collapsed" data-toggle="collapse"  href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                  <i class="fa fa-caret-right" aria-hidden="true"></i>
+          Education
+        </a>
+      </h3>
+    </div>
+    <div id="collapseSix" class="collapse" role="tabpanel" aria-labelledby="headingSix">
+      <div class="card-block">
+     <p>University Name<br>
+College or Program Name<br>
+Degree Title - Class of 20YY<br>
+Name of major / concentration / etc<br>
+       (if you graduated with honors, mention that here)</p>
+        <p>     University Name<br>
+College or Program Name<br>
+Degree Title - Class of 20YY<br>
+Name of major<br>
+(if you graduated with honors, mention that here)</p>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-header" role="tab" id="headingSeven">
+      <h3 class="mb-0 job-title">
+        <a class="collapsed" data-toggle="collapse"  href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                   <i class="fa fa-caret-right" aria-hidden="true"></i>
+Hobbies & Interests
+        </a>
+      </h3>
+    </div>
+    <div id="collapseSeven" class="collapse" role="tabpanel" aria-labelledby="headingSeven">
+      <div class="card-block">
+        <p>Hobby 1<br>
+Brief explanation</p>
+<ul>
+  <li>Explain why this is interesting to potential employers</li>
+  <li>Ideally this gives you skills/experience you don't get directly from work</li>
+  <li>Dynamically procrastinate B2C users after installed base benefits. </li>
+
+        </ul>
+        <p>Hobby2<br>
+Brief explanation</p>
+        <ul>
+          <li>Explain why this is interesting to potential employers</li>
+  <li>Ideally this gives you skills/experience you don't get directly from work</li>
+  <li>Dynamically procrastinate B2C users after installed base benefits. </li>
+
+        </ul>
+        <p>Hobby3<br>
+        Brief explanation</p>
+        <ul>
+                    <li>Explain why this is interesting to potential employers</li>
+  <li>Ideally this gives you skills/experience you don't get directly from work</li>
+  <li>Dynamically procrastinate B2C users after installed base benefits. </li>
+
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+      </div>
+                <!-- /.col -->
+
+    </div>
+        <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
+
+</section>
+  <hr>
+
+<!-- Contact -->
+<span class="anchor" id="contact"></span>
+<section class="contact">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-12">
+        <h2>Contact</h2>
+      </div>
+    </div>
+    <!-- /.row -->
+
+
+  </div>
+  <!-- /.container -->
+  <div class="container">
+     <div class="row text-center">
+       <div class="col">
+         <p><i class="fa fa-envelope-o" aria-hidden="true"></i>
+<a href="mailto: you@yourdomain.com">you@yourdomain.com</a></p>
+       </div>
+    </div>
+      <!-- /.row -->
+         <div class="row text-center">
+             <div class="col">
+               <p><i class="fa fa-twitter" aria-hidden="true"></i>
+<a href="https://twitter.com/username" target="_blank">twitter.com/username</a></p>
+           </div>
+    </div>
+      <!-- /.row -->
+         <div class="row text-center">
+             <div class="col">
+               <p><i class="fa fa-linkedin" aria-hidden="true"></i>
+<a href="https://www.linkedin.com/in/username" target="_blank">linkedin.com/in/username</a></p>
+    </div>
+    </div>
+      <!-- /.row -->
+  </div>
+    <!-- /.container -->
+
+
+</section>
+
+<!-- Footer -->
+<footer>
+  <div class="container footer">
+       <div class="row text-center">
+         <div class="col">
+         <p class="bottom-nav"><a href="#">Back to top</a></p>
+         </div>
+    </div>
+    <div class="row text-center">
+      <div class="col">
+      <p class="small credits">Designed and coded by <a href="https://github.com/cloakedsec" target="_blank">Ahmad Faraz</a></p>
+      </div>
+    </div>
+  </div>
+</footer>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js'></script>
+
+
+
+    <script  src="script.js"></script>
+
+
+
+
+</body>
+
 </html>
